# bert_compression

./: .env.example  .flake8  .gitignore  README.md  kaggle.txt  pyproject.toml  train.py
configs/: baseline.yaml  debug.yaml
scripts/: kaggle_train.py
src/compression/: base.py  registry.py
src/data/: dataset.py  preprocessing.py
src/evaluation/: metrics.py
src/methods/: __init__.py  registry.py  teacher.py
src/models/: teacher.py
src/training/: standard.py
src/utils/: checkpoint.py  logging.py  model_utils.py  seed.py
tests/: test_data.py
