[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bert-compression-ner"
version = "0.1.0"
description = "BERT compression for NER: distillation, pruning, quantization"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ocelot335" }]

dependencies = [
    # Deep learning
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "tokenizers>=0.15.0",
    "accelerate>=0.25.0",
    # Tensor decomposition
    "tensorly>=0.8.1",
    # Evaluation
    "seqeval>=1.2.2",
    "scikit-learn>=1.3.0",
    # Config
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    # Logging
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "comet-ml>=3.35.0",
    # HuggingFace Hub
    "huggingface-hub>=0.20.0",
    # Data / viz
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "einops>=0.7.0",
    # System
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ipykernel>=6.28.0",
    "jupyter>=1.0.0",
    # Benchmarking
    "fvcore>=0.1.5",
    "codecarbon>=2.3.3",
    # Export
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]